--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URL = mongodb+srv://medshoppe:medshoppe@cluster0.lfujmad.mongodb.net/medshoppe?retryWrites=true&w=majority
+# MONGO_URL = mongodb+srv://medshoppe:medshoppe@cluster0.lfujmad.mongodb.net/medshoppe?retryWrites=true&w=majority
+
+MONGO_URL = mongodb://localhost:27017/nem-201
 PORT = 8080
