--- a/medshoppe-admin/package.json
+++ b/medshoppe-admin/package.json
@@ -2,6 +2,7 @@
   "name": "medshoppe-admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
